fix(submenu): Force horizontal scroll to hide.

--- a/www/front_src/src/components/navigation/navigation.scss
+++ b/www/front_src/src/components/navigation/navigation.scss
@@ -859,8 +859,8 @@ a {
 @media screen and(max-width: 1500px) {
   li.menu-item:last-child .collapsed-items li.collapsed-item:first-child > ul.collapsed-level-items {
     max-height: 350px;
-    overflow-x: hidden;
     overflow-y: auto;
+    overflow-x: hidden !important;
   }
 }
 .sidebar.active .menu-item:nth-child(4).active + .menu-item > ul.list-unstyled .collapsed-item:first-child:hover > ul {
